unpackaged/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <label>Commission</label>
    <nameField>
        <displayFormat>CS{0000}</displayFormat>
        <label>Commission Statement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>