unpackaged/main/default/objects/Commission__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SOLUTIONS</fullName>
            </value>
            <value>
                <fullName>PLM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>