unpackaged/main/default/objects/Commission__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>"CY" &amp; RIGHT(TEXT(YEAR( Date__c )),2)

&amp;

CASE(MONTH( Date__c ),
1, "Q1" ,
2, "Q1",
3, "Q1",
4, "Q2",
5, "Q2",
6, "Q2",
7, "Q3",
8, "Q3",
9, "Q3",
10, "Q4",
11, "Q4",
12, "Q4",
"None")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <type>Text</type>
</CustomField>