unpackaged/main/default/objects/Commission__c/fields/TotalCommission__c.field-meta.xml
<CustomField>
    <fullName>TotalCommission__c</fullName>
    <label>Total Commission</label>
    <summarizedField>CommissionPayment__c.CommissionPayment__c</summarizedField>
    <summaryForeignKey>CommissionPayment__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>