unpackaged/main/default/objects/Commission__c/fields/TotalMargin__c.field-meta.xml
<CustomField>
    <fullName>TotalMargin__c</fullName>
    <label>Total Margin</label>
    <summarizedField>CommissionPayment__c.Margin__c</summarizedField>
    <summaryForeignKey>CommissionPayment__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>