unpackaged/main/default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Company__c</columns>
    <columns>Month__c</columns>
    <columns>Period__c</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>TotalMargin__c</columns>
    <columns>TotalCommission__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Commission Statements</label>
</ListView>