unpackaged/main/default/objects/Commission__c/listViews/AllSolutions.listView-meta.xml
<ListView>
    <fullName>AllSolutions</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Company__c</columns>
    <columns>Month__c</columns>
    <columns>Period__c</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>TotalMargin__c</columns>
    <columns>TotalCommission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>SOLUTIONS</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Gregory</value>
    </filters>
    <label>1</label>
</ListView>