unpackaged/main/default/objects/Commission__c/listViews/PLM_Statements_Last_Month.listView-meta.xml
<ListView>
    <fullName>PLM_Statements_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Company__c</columns>
    <columns>Month__c</columns>
    <columns>Period__c</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>TotalMargin__c</columns>
    <columns>TotalCommission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>PLM</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>PLM Statements Last Month</label>
</ListView>